# PSIrc

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  ruff.toml
.github/workflows/: format.yml  test.yml
docs/: Dokumentacja.rst  conf.py  index.rst  modules.rst  psirc.rst
src/: main.py  psirc.conf
src/psirc/: channel.py  channel_manager.py  client.py  client_manager.py  command_helpers.py  command_manager.py  connection_manager.py  identity.py  identity_manager.py  irc_validator.py  message.py  message_parser.py  password_handler.py  response_params.py  routing_manager.py  server.py  session_,manager.py  session_info.py  session_info_manager.py  session_manager.py  user.py  user_manager.py
src/psirc/defines/: commands.py  error_codes.py  exceptions.py  response_codes.py  responses.py
tests/: test_irc_validator.py  test_message.py  test_message_parser.py  test_user_manager.py
