[tool.poetry]
name = "psirc"
version = "0.1.0"
description = "IRC Server and Client for PSI"
authors = ["doaads <nowobart@gmail.com>"]
readme = "README.md"
packages = [{include = "psirc", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
typing-extensions = "^4.12.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
black = "^24.10.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
